--- a/app/src/main/res/layout/activity_transport_company_profile.xml
+++ b/app/src/main/res/layout/activity_transport_company_profile.xml
@@ -49,7 +49,9 @@
                     android:layout_height="150dp"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/placeholder_header_user_dp" />
+                    android:src="@drawable/placeholder_header_user_dp"
+                    app:civ_border_color="@color/colorPrimary"
+                    app:civ_border_width="8dp" />
 
             </RelativeLayout>
 
@@ -63,9 +65,7 @@
                     android:id="@+id/companyName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
                     android:fontFamily="@font/lato_bold"
-                    android:maxLines="1"
                     android:text=""
                     android:textAlignment="center"
                     android:textColor="@color/textColor"
@@ -79,8 +79,8 @@
                     android:id="@+id/companyDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
                     android:fontFamily="@font/lato"
+                    android:maxLength="500"
                     android:text=""
                     android:textAlignment="center"
                     android:textColor="@color/textColor"
@@ -107,16 +107,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:ellipsize="end"
+                        android:ellipsize="marquee"
                         android:fontFamily="@font/lato_bold"
-                        android:maxLines="1"
+                        android:singleLine="true"
                         android:text="Contact Us:"
                         android:textAlignment="center"
                         android:textColor="@color/textColor"
@@ -133,13 +131,13 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/companyTelephoneNumberLabel"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
+                            android:ellipsize="marquee"
                             android:fontFamily="@font/lato"
-                            android:maxLines="1"
+                            android:singleLine="true"
                             android:text="Telephone No.:"
-                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -151,10 +149,8 @@
                             android:id="@+id/companyTelephoneNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
                             android:text=""
-                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -166,13 +162,13 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/companyCellphoneNumberLabel"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
+                            android:ellipsize="marquee"
                             android:fontFamily="@font/lato"
-                            android:maxLines="1"
+                            android:singleLine="true"
                             android:text="Cellphone No.:"
-                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -184,10 +180,8 @@
                             android:id="@+id/companyCellphoneNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
                             android:text=""
-                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -199,13 +193,13 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/companyEmailLabel"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
+                            android:ellipsize="marquee"
                             android:fontFamily="@font/lato"
-                            android:maxLines="1"
+                            android:singleLine="true"
                             android:text="Email:"
-                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -217,10 +211,10 @@
                             android:id="@+id/companyEmail"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
+                            android:ellipsize="marquee"
                             android:fontFamily="@font/lato"
+                            android:singleLine="true"
                             android:text=""
-                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -232,13 +226,13 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/companyWebsiteLabel"
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
+                            android:ellipsize="marquee"
                             android:fontFamily="@font/lato"
-                            android:maxLines="1"
+                            android:singleLine="true"
                             android:text="Website:"
-                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -250,17 +244,16 @@
                             android:id="@+id/companyWebsite"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
+                            android:ellipsize="marquee"
                             android:fontFamily="@font/lato"
+                            android:singleLine="true"
                             android:text=""
-                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
                     </LinearLayout>
 
                 </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
