--- a/app/src/main/res/layout/activity_transport_profile_admin.xml
+++ b/app/src/main/res/layout/activity_transport_profile_admin.xml
@@ -53,7 +53,9 @@
                         android:layout_height="150dp"
                         android:layout_alignParentBottom="true"
                         android:layout_centerHorizontal="true"
-                        android:src="@drawable/placeholder_header_user_dp" />
+                        android:src="@drawable/placeholder_header_user_dp"
+                        app:civ_border_color="@color/colorPrimary"
+                        app:civ_border_width="8dp" />
 
                 </RelativeLayout>
 
@@ -109,16 +111,14 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
+                            android:ellipsize="marquee"
                             android:fontFamily="@font/lato_bold"
-                            android:maxLines="1"
+                            android:singleLine="true"
                             android:text="Contact Us:"
                             android:textAlignment="center"
                             android:textColor="@color/textColor"
@@ -135,13 +135,13 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/companyTelephoneNumberLabel"
                                 android:layout_width="110dp"
                                 android:layout_height="wrap_content"
-                                android:ellipsize="end"
+                                android:ellipsize="marquee"
                                 android:fontFamily="@font/lato"
-                                android:maxLines="1"
+                                android:singleLine="true"
                                 android:text="Telephone No.:"
-                                android:textAlignment="viewStart"
                                 android:textColor="@color/textColor"
                                 android:textSize="14sp" />
 
@@ -155,7 +155,6 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/lato"
                                 android:text=""
-                                android:textAlignment="viewStart"
                                 android:textColor="@color/textColor"
                                 android:textSize="14sp" />
                         </LinearLayout>
@@ -167,13 +166,13 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/companyCellphoneNumberLabel"
                                 android:layout_width="110dp"
                                 android:layout_height="wrap_content"
-                                android:ellipsize="end"
+                                android:ellipsize="marquee"
                                 android:fontFamily="@font/lato"
-                                android:maxLines="1"
+                                android:singleLine="true"
                                 android:text="Cellphone No.:"
-                                android:textAlignment="viewStart"
                                 android:textColor="@color/textColor"
                                 android:textSize="14sp" />
 
@@ -187,7 +186,6 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/lato"
                                 android:text=""
-                                android:textAlignment="viewStart"
                                 android:textColor="@color/textColor"
                                 android:textSize="14sp" />
                         </LinearLayout>
@@ -199,13 +197,13 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/companyEmailLabel"
                                 android:layout_width="110dp"
                                 android:layout_height="wrap_content"
-                                android:ellipsize="end"
+                                android:ellipsize="marquee"
                                 android:fontFamily="@font/lato"
-                                android:maxLines="1"
+                                android:singleLine="true"
                                 android:text="Email:"
-                                android:textAlignment="viewStart"
                                 android:textColor="@color/textColor"
                                 android:textSize="14sp" />
 
@@ -217,10 +215,10 @@
                                 android:id="@+id/companyEmail"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:ellipsize="end"
+                                android:ellipsize="marquee"
                                 android:fontFamily="@font/lato"
+                                android:singleLine="true"
                                 android:text=""
-                                android:textAlignment="viewStart"
                                 android:textColor="@color/textColor"
                                 android:textSize="14sp" />
                         </LinearLayout>
@@ -232,13 +230,13 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/companyWebsiteLabel"
                                 android:layout_width="110dp"
                                 android:layout_height="wrap_content"
-                                android:ellipsize="end"
+                                android:ellipsize="marquee"
                                 android:fontFamily="@font/lato"
-                                android:maxLines="1"
+                                android:singleLine="true"
                                 android:text="Website:"
-                                android:textAlignment="viewStart"
                                 android:textColor="@color/textColor"
                                 android:textSize="14sp" />
 
@@ -250,10 +248,10 @@
                                 android:id="@+id/companyWebsite"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:ellipsize="end"
+                                android:ellipsize="marquee"
                                 android:fontFamily="@font/lato"
+                                android:singleLine="true"
                                 android:text=""
-                                android:textAlignment="viewStart"
                                 android:textColor="@color/textColor"
                                 android:textSize="14sp" />
                         </LinearLayout>
