--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/background_body"
     android:fitsSystemWindows="true"
     tools:context=".ui.user.UserHomeActivity"
-    tools:openDrawer="start">
+    tools:openDrawer="end">
 
     <RelativeLayout
         android:layout_width="match_parent"
