--- a/app/src/main/res/layout/booking_user_confirmed_item_layout.xml
+++ b/app/src/main/res/layout/booking_user_confirmed_item_layout.xml
@@ -11,6 +11,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
+        android:elevation="6dp"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground">
 
