--- a/app/src/main/res/layout/nav_header_transport_main.xml
+++ b/app/src/main/res/layout/nav_header_transport_main.xml
@@ -18,13 +18,15 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="8dp"/>
+        android:layout_height="8dp" />
 
     <TextView
         android:id="@+id/companyName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_bold"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:text="company_name"
         android:textColor="#FFFFFF"
         android:textSize="16sp" />
@@ -34,13 +36,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:text="address"
         android:textColor="#FFFFFF"
         android:textSize="14sp" />
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="8dp"/>
+        android:layout_height="8dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,7 +72,9 @@
                 android:id="@+id/headerUserName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:fontFamily="@font/lato_bold"
+                android:maxLines="1"
                 android:text="user_name"
                 android:textColor="@color/textColor"
                 android:textSize="16sp" />
@@ -77,7 +83,9 @@
                 android:id="@+id/headerUserEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:fontFamily="@font/lato"
+                android:maxLines="1"
                 android:text="user_email"
                 android:textColor="@color/textColor"
                 android:textSize="14sp" />
@@ -86,7 +94,9 @@
                 android:id="@+id/headerUserAccountType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:fontFamily="@font/lato"
+                android:maxLines="1"
                 android:text="user_account_type"
                 android:textColor="@color/textColor"
                 android:textSize="14sp" />
